# openapi-rust

./: Cargo.toml
src/: client.rs  errors.rs  lib.rs  settings.rs
src/models/: mod.rs
src/requests/: mod.rs  request_completion.rs
