[package]
name = "openapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Call get/post
reqwest = { version = "0.11.13", features = ["json"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.59"
# Serialize/Deserialize Object
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Error management
anyhow = "1.0.66"
thiserror="1.0.37"